# codebase-RAG

./: .env  .env.example  .gitignore  .ragignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  MANUAL.md  README.md  manual_indexing.py  pyproject.toml  setup.sh
.github/workflows/: docker-health.yml  security.yml
docs/: ARCHITECTURE_DEEP_DIVE.md  BEST_PRACTICES.md  CONFIGURATION.md  MCP_TOOLS.md  RAG-testing-framework-and-ci-cd.md  plan-two-stage-rag-reranking.md
src/: run_mcp.py
src/models/: file_metadata.py
src/services/: ast_extraction_service.py  change_detector_service.py  chunking_strategies.py  code_parser_service.py  embedding_service.py  file_discovery_service.py  indexing_pipeline.py  indexing_reporter.py  indexing_service.py  language_support_service.py  mlx_embedding_service.py  query_history_analyzer.py  reranker_service.py  routing_performance_tracker.py
src/tests/: conftest.py  test_advance_search_prompt.py  test_advanced_search_tool.py  test_code_parser_service.py  test_embedding_service.py  test_end_to_end_workflow.py  test_indexing_pipeline.py  test_intelligent_chunking.py  test_manual_indexing_tool.py  test_performance_benchmarks.py  test_project_discovery_utils.py  test_rag_quality.py  test_search_bug_fixes.py  test_syntax_error_handling.py
src/tools/: registry.py
src/tools/indexing/: async_fix.py  index_tools.py  search_tools.py
src/tools/project/: project_tools.py  project_utils.py
src/utils/: async_context_manager.py  fallback_tracker.py  logging_config.py  output_control.py  point_id_generator.py  point_id_validator.py  search_diagnostics.py  search_diagnostics.test.py  stage_logger.py
tests/: rag_test_runner.py  test_runtime_reliability_fixes.py
