[project]
name = "codebase-rag-mcp"
version = "0.1.0"
description = "A RAG MCP server for codebase understanding."
authors = [{ name = "Agentic-RAG" }]
requires-python = "~=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "uvicorn[standard]>=0.29.0,<0.30",
    "qdrant-client>=1.9.0,<2",
    "ollama>=0.2.0,<0.3",
    "torch>=2.3.0,<3",
    "pathspec>=0.12.0,<0.13",
    "gitpython>=3.1.43,<4",
    "python-dotenv>=1.0.0,<2",
    "mcp[cli]>=1.9.4,<2",
    "numpy<2.0",
    "psutil>=5.9.0,<6",
    "tree-sitter>=0.24.0,<0.25",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust==0.21.2",
    "tree-sitter-java",
    "tree-sitter-cpp",
    "requests>=2.31.0,<3",
    # Reranker dependencies (Two-Stage RAG)
    "transformers>=4.51.0",
    "sentencepiece>=0.2.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.2.2,<9",
    "pytest-cov>=4.1.0,<5",       # Coverage reporting
    "pytest-xdist>=3.5.0,<4",     # Parallel test execution
    # Linting & Formatting
    "pre-commit>=4.2.0,<5",
    "ruff>=0.12.1,<0.13",
    "black>=25.1.0,<26",
    # RAG Quality Evaluation
    "ragas>=0.2.0",               # RAG evaluation framework
    "datasets>=2.18.0,<3",        # Required by RAGAS
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 140
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | src/tests/fixtures/sample_code/sample_syntax_errors\.py
)/
'''

[tool.ruff]
# Same line length as Black for compatibility
line-length = 140
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "I", "N", "UP", "YTT", "BLE", "B", "A", "C4", "T20"]
ignore = [
    "E203",  # Whitespace before ':' (Black handles this)
    "BLE001",  # Do not catch blind exception: Exception - allow for error handling
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` - allow for simplicity
    "B023",  # Function definition does not bind loop variable - allow for closure patterns
    "F401",  # Imported but unused - allow for availability checking
    "B007",  # Loop control variable not used - allow for iteration patterns
    "N801",  # Class name convention - allow for specific patterns
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/tests/fixtures/sample_code/sample_syntax_errors.py" = ["ALL"]  # Ignore all in test fixtures
"src/tests/**/*.py" = ["T201", "BLE001", "N806"]  # Allow print, bare except, and variable naming in tests
"demo_*.py" = ["T201", "BLE001"]  # Allow print and bare except in demos
"test_*.py" = ["T201", "BLE001", "N806"]  # Allow print, bare except, and variable naming in test files
"manual_indexing.py" = ["T201", "BLE001"]  # Allow print and bare except in manual tool
"src/**/*.test.py" = ["T201", "BLE001", "N806", "N999"]  # Allow print, bare except, variable naming, and module naming in test files
"src/utils/workflow_orchestrator.py" = ["BLE001"]  # Allow bare except for error handling
"src/mcp_prompts.py" = ["BLE001", "E501"]  # Allow bare except and long lines in template prompts
"src/utils/tree_sitter_manager.py" = ["BLE001", "B904", "F601"]  # Allow bare except and other tree-sitter specific issues
"src/prompts/**/*.py" = ["E501"]  # Allow long lines in prompt templates
"src/services/indexing_service.py" = ["E501"]  # Allow long lines in logging statements
"src/services/rag_search_strategy.py" = ["E501"]  # Allow long lines in data structure formatting
"src/utils/prompt_*.py" = ["BLE001"]  # Allow bare except in utility modules
"src/services/indexing_reporter.py" = ["T201"]  # Allow print for progress reporting

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
# Enable docstring code formatting
docstring-code-format = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
# Test discovery paths
testpaths = ["src/tests"]

# Default command line options
# -v: verbose output
# --tb=short: shorter traceback format
# -ra: show extra test summary for all except passed
addopts = "-v --tb=short -ra"

# Marker definitions for test categorization
markers = [
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services (Qdrant, Ollama)",
    "rag_quality: marks tests as RAG quality evaluation tests",
    "requires_qdrant: marks tests that require Qdrant database connection",
    "requires_ollama: marks tests that require Ollama service for embeddings/LLM",
    "requires_reranker: marks tests that require reranker model to be loaded",
    "unit: marks tests as fast unit tests with no external dependencies",
    "smoke: marks tests as basic smoke tests for quick validation",
]

# Warning filters
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Minimum Python version for tests
minversion = "8.0"

# Strict marker enforcement (fail on unknown markers)
# Note: In pytest 8.x, use --strict-markers flag instead
# strict_markers = true

# Test collection settings
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
